# mandeye_tec

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
code/: FileSystemClient.cpp  FileSystemClient.h  LivoxClient.cpp  gnss.cpp  gnss.h  main.cpp  publisher.cpp  publisher.h  save_laz.cpp  save_laz.h  web_page.h
code/utils/: logger.cpp  logger.h  network.cpp  network.h
config/: mandeye_config.json
scripts/: build.sh  build_docker.sh  deploy.sh  ds_build_app.sh  ds_build_livoxsdk2.sh  ds_deploy.sh  ds_install_dependencies.sh  ds_pull_submodules.sh  ds_setup_service.sh  ds_setup_static_ip.sh  ds_setup_usb_mount.sh  ds_setup_venv.sh  install.sh  install_dependencies.sh  run_docker.sh  run_web.sh  setup_service.sh
web/: api.py  app.py  backend.py  ui.py  usb_utils.py
web/templates/: index.html
